# Aether

./: .env.example  .gitignore  AGENTS.md  LICENSE  QUICKSTART.md  README.md  ROADMAP.md  package.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  smoke.yml
scripts/: screenshots.mjs
src/: __init__.py  __version__.py  dashboard.py  main.py  mqtt_client.py  orchestrator.py  sim_engine.py
src/agents/: __init__.py  hal_90.py  solara.py  veridian.py
src/templates/: dashboard.html  layout.html
src/templates/pages/: agents.html  dashboard.html  history.html  mqtt.html  scenarios.html  settings.html
tests/: test_basic.py
webpages/: landing-1.html  landing-2.html  landing-3.html  landing-4.html
